# cwapi3d-starter

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/cwapi3d_starter/: cli.py  generator.py
src/cwapi3d_starter/templates/: .gitignore  README.md  entry_point_py.template  example_geometry.py  main_py.template  pyproject.toml  test_placeholder.py
src/cwapi3d_starter/templates/vscode/: launch.json  settings.json
