[project]
name = "cwapi3d-starter"
version = "0.1.0"
description = "Project scaffolding for cwapi3d Python projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
cwapi3d-starter = "cwapi3d_starter.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cwapi3d_starter"]
