[project]
name = "cwapi3d-starter"
version = "0.2.0"
description = "Project scaffolding for cwapi3d Python projects"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Michael Brunner", email = "brunner@cadwork.swiss" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/Brunner246/cwapi3d-starter"
Repository = "https://github.com/Brunner246/cwapi3d-starter"
Issues = "https://github.com/Brunner246/cwapi3d-starter/issues"

[project.scripts]
cwapi3d-starter = "cwapi3d_starter.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cwapi3d_starter"]
