[project]
name = "$project_name"
version = "0.1.0"
description = "A cwapi3d Python project"
readme = "README.md"
requires-python = ">=$python_version"
dependencies = [
    "cwapi3d",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/$package_name"]
